--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "National Park Biodiversity Analytics Project"
+title: "Analysis of Life Expectancy and GDP Data project"
 logo: "/img/logo.png"
 description: "Publisher: Le Trung Quoc"
 show_downloads: true
