--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: "Analysis of Life Expectancy and GDP Data project"
 logo: "/img/logo.png"
 description: "Publisher: Le Trung Quoc"
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
